--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -105,62 +105,14 @@ html body {
 }
 
 /* Hide the images by default */
-.mySlides1 {
-  display: none;
-  padding-left: 20%;
-  z-index: 1;
-}
-.mySlides2 {
+.mySlides1, .mySlides2, .mySlides3 {
   display: none;
   padding-left: 20%;
   z-index: 1;
 }
 
-/* Next & previous buttons */
-.prev1, .next1 {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-.prev2, .next2 {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-/* Position the "next button" to the right */
-.next1 {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-.next2 {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-/* On hover, add a black background color with a little bit see-through */
-.prev1:hover, .next1:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-.prev2:hover, .next2:hover {
-  background-color: rgba(0,0,0,0.8);
-}
+
+
 /* Caption text */
 .text {
   color: #f2f2f2;
@@ -170,37 +122,10 @@ html body {
   width: 100%;
 }
 
-/* The dots/bullets/indicators */
-.dot1 {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-.dot2 {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-.active, .dot1:hover {
-  background-color: #717171;
-}
-.active, .dot2:hover {
-  background-color: #717171;
-}
 /* Fading animation */
 .fade {
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 2.5s;
 }
 
 @keyframes fade {
