--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -128,13 +128,21 @@ color: #77F295;
 
 /* Fading animation */
 .fade {
-  animation-name: fade;
-  animation-duration: 2.5s;
+  /*animation-name: fade;*/
+  /*animation-duration: 2.5s;*/
+  animation: fade 6s linear forwards;
+  opacity: 0;
 }
 
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+  0% {opacity: 0; }
+  25% {opacity: 1; }
+  50% {opacity: 1; }
+  75% {opacity: 1; }
+  100% {opacity: 0 ;}
+
+  /*from {opacity: .5} 
+  to {opacity: 1}*/
 }
 
 
