--- a/resources/css/history.css
+++ b/resources/css/history.css
@@ -1,6 +1,6 @@
 html body{
   max-width: 2400px;
-  background-image: url(../images/Aus.jpeg);
+  background-image: url(../images/History/BG.jpeg);
   min-height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -8,28 +8,76 @@ html body{
   background-size: cover;
   align-content: center;
 }
+* {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .heading {
-  width: 106%;
-  height: 230px;
-  background-image: url(../images/headingback.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  margin-top: -0.5%;
-  margin-left: -0.5%;
-  padding-right: 0.5%;
-  padding-left: -0.5%;
-  box-shadow: 15px 15px 10px rgb(17, 16, 16);
-  z-index: 10;
+ display: inline-flex;
+ justify-content: space-around;
+ width: 100%;
+ height: auto;
+}
+#logo {
+  width: 150px;
+  height: auto;
+}
+#title {
+  margin-left: 15%;
+ }
+.leftBody {
+  width: 50%;
+  justify-content: center;
+}
+p {
+  font-size: 1.2rem;
+  letter-spacing: 0.1rem;
+  line-height: 1.5rem;
+}
+#linksTop {
+  display: block;
+  padding: 2%;
+  font-weight: bold;
+}
+#linksLeft {
+  width: 60%;
+  display: block;
+  font-size: 1.2rem;
+  letter-spacing: 0.1rem;
+  line-height: 1.5rem;
+}
+.rightBody {
+  float: right;
+}
+h1 {
+  font-size: 3.5rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.5rem;
+}
+em {
+  font-size: 1.5rem;
+  color: rgb(12, 12, 12);
 }
 
 
-/* FOOTER */
-    .footer {
-      display: flex;
-    }
-    .name {
-      color:#f0edce ;
-    }
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  position: absolute;
+  bottom: 0;
+  width: 90%;
+  height: 3.5rem;           
+}
+.foot {
+  width: 70px;
+  height: auto;
+  margin-top: -1%;
+  padding-bottom: 10px;
+}
     
    
   
