--- a/resources/css/history.css
+++ b/resources/css/history.css
@@ -45,9 +45,7 @@ p {
   letter-spacing: 0.1rem;
   line-height: 1.5rem;
 }
-.rightBody {
-  float: right;
-}
+
 h1 {
   font-size: 3.5rem;
 }
@@ -78,6 +76,43 @@ em {
   margin-top: -1%;
   padding-bottom: 10px;
 }
-    
-   
+@media(max-width: 1000px) {
+  .leftBody {
+    width: 70%;
+    justify-content: center;
+  }
+  #linksLeft {
+    width: 60%;
+    display: block;
+    font-size: 1.2rem;
+    letter-spacing: 0.1rem;
+    line-height: 1.5rem;
+  }
+} 
+@media(max-width: 800px) {
+  .leftBody {
+    width: 90%;
+    justify-content: center;
+  }
+  #linksLeft {
+    width: 100%;
+    display: block;
+    font-size: 1.2rem;
+    letter-spacing: 0.1rem;
+    line-height: 1.5rem;
+  }
+} 
+@media(max-width: 480px) {
+  .leftBody {
+    width: 100%;
+    justify-content: center;
+  }
+  #linksLeft {
+    width: 90%;
+    display: block;
+    font-size: 1.2rem;
+    letter-spacing: 0.1rem;
+    line-height: 1.5rem;
+  }
+}    
   
