--- a/resources/css/history.css
+++ b/resources/css/history.css
@@ -12,32 +12,43 @@ html body{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .heading {
- display: inline-flex;
- justify-content: space-around;
- width: 100%;
- height: auto;
-}
-#logo {
-  width: 150px;
-  height: auto;
-}
-#title {
-  margin-left: 15%;
+  margin-top: -5px;
+  margin-left: -6px;
+  background-image: url(../images/History/top.jpeg);
+  display: flex;
+  width: 100%;
+  height: 180px;   
+  position: fixed;
+  z-index: 10;
  }
+.heading img {
+  margin-right: 8%;
+  width: 200px;
+  height: auto;
+  margin-top: -5px;
+  position: relative;
+}
+.heading h1 {
+  margin-left: 8%;
+  min-width: 400px;
+  margin-top: -2px;
+  font-size: 3em;
+  position: sticky;
+}
+.heading ul {
+  font-size: 1.2em;
+  line-height: 1.2em;
+  font-weight: 400;
+  display: block;
+  margin-left: 8%;
+  margin-top: -2px;
+  position: sticky;
+}
 .leftBody {
   width: 50%;
   justify-content: center;
 }
-p {
-  font-size: 1.2rem;
-  letter-spacing: 0.1rem;
-  line-height: 1.5rem;
-}
-#linksTop {
-  display: block;
-  padding: 2%;
-  font-weight: bold;
-}
+
 #linksLeft {
   width: 60%;
   display: block;
@@ -45,10 +56,12 @@ p {
   letter-spacing: 0.1rem;
   line-height: 1.5rem;
 }
-
-h1 {
-  font-size: 3.5rem;
+a {
+  text-decoration: none;
+  color: black ;
 }
+
+
 h2 {
   font-size: 2rem;
 }
@@ -59,7 +72,11 @@ em {
   font-size: 1.5rem;
   color: rgb(12, 12, 12);
 }
-
+p {
+  font-size: 1.2rem;
+  letter-spacing: 0.1rem;
+  line-height: 1.5rem;
+}
 
 .footer {
   display: flex;
@@ -76,43 +93,5 @@ em {
   margin-top: -1%;
   padding-bottom: 10px;
 }
-@media(max-width: 1000px) {
-  .leftBody {
-    width: 70%;
-    justify-content: center;
-  }
-  #linksLeft {
-    width: 60%;
-    display: block;
-    font-size: 1.2rem;
-    letter-spacing: 0.1rem;
-    line-height: 1.5rem;
-  }
-} 
-@media(max-width: 800px) {
-  .leftBody {
-    width: 90%;
-    justify-content: center;
-  }
-  #linksLeft {
-    width: 100%;
-    display: block;
-    font-size: 1.2rem;
-    letter-spacing: 0.1rem;
-    line-height: 1.5rem;
-  }
-} 
-@media(max-width: 480px) {
-  .leftBody {
-    width: 100%;
-    justify-content: center;
-  }
-  #linksLeft {
-    width: 90%;
-    display: block;
-    font-size: 1.2rem;
-    letter-spacing: 0.1rem;
-    line-height: 1.5rem;
-  }
-}    
+ 
   
