--- a/resources/css/history.css
+++ b/resources/css/history.css
@@ -24,33 +24,39 @@ html body{
 .heading img {
   margin-right: 7%;
   width: 200px;
-  height: auto;
-  margin-top: -5px;
-  position: relative;
+  margin-top: none; 
+  position: fixed;
 }
 .heading h1 {
-  margin-left: 7%;
+  margin-left: 35%;
   min-width: 400px;
-  margin-top: -2px;
   font-size: 3em;
-  position: sticky;
+  position: relative;
 }
-.heading ul {
-  min-width: 300px;
+.nav{
+  background-image: url(../images/History/nav.jpeg);
+  width: 100%;
+  margin-top: 1px;
+  margin-left: -6px;
+  position: fixed;
+}
+.nav #navigation {
+  display: inline-flex;
+  justify-content: space-around;
+  margin-top: 190px;
+  width: 100%;
   font-size: 1.2em;
   line-height: 1.2em;
   font-weight: 400;
-  display: block;
-  margin-left: 8%;
-  margin-top: -2px;
-  position: sticky;
+  font-size: 1.5rem;
+  font-weight: 400;
 }
+
 .leftBody {
-  margin-top: 200px;
+  margin-top: 250px;
   width: 50%;
   justify-content: center;
 }
-
 #linksLeft {
   width: 60%;
   display: block;
@@ -58,12 +64,11 @@ html body{
   letter-spacing: 0.1rem;
   line-height: 1.5rem;
 }
+
 a {
   text-decoration: none;
   color: black ;
 }
-
-
 h2 {
   font-size: 2rem;
 }
@@ -81,58 +86,36 @@ p {
 }
 
 .footer {
+  background-image: url(../images/History/top.jpeg);
   display: flex;
   justify-content: space-between;
   align-content: center;
   position: absolute;
   bottom: 0;
-  width: 90%;
-  height: 3.5rem;           
+  width: 100%;
+  height: 180px;           
 }
 .foot {
   width: 70px;
-  height: auto;
-  margin-top: -1%;
+  height: 70px;
+  margin-top: 100px;
   padding-bottom: 10px;
+  margin-left: 10px;
 }
-@media(max-width: 1200px) {
-  .heading ul {
-    min-width: 300px;
-    font-size: 1.2em;
-    line-height: 1.2em;
-    font-weight: 400;
-    display: block;
-    margin-left: -2%;
-    margin-top: -2px;
-    position: sticky;
-  }
-  .heading h1 {
-    margin-left: -1%;
-    min-width: 400px;
-    margin-top: -2px;
-    font-size: 3em;
-    position: sticky;
-  }
+.footname {
+  margin-top: 150px;
+  padding-bottom: 10px;
+  margin-right: 100px;
+  font-size: 0.8rem;
 } 
 @media(max-width: 1000px) {
   .leftBody {
     width: 100%;
   }
-  .heading h1 {
-    margin-left: -2%;
-    min-width: 400px;
-    margin-top: -2px;
-    font-size: 3em;
-    position: sticky;
-  }
-  .heading ul {
-    min-width: 300px;
-    font-size: 1.2em;
-    line-height: 1.2em;
-    font-weight: 400;
+  .nav #navigation {
     display: block;
-    margin-left: -3%;
-    margin-top: -2px;
-    position: sticky;
+  }
+  .leftBody {
+    margin-top: 310px;
   }
 }  
