--- a/resources/css/history.css
+++ b/resources/css/history.css
@@ -7,13 +7,14 @@ html body{
   background-position: center;
   background-size: cover;
   align-content: center;
+  overflow-x: hidden;
 }
 * {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .heading {
-  margin-top: -5px;
-  margin-left: -6px;
+  top: 0;
+  left: 0;
   background-image: url(../images/History/top.jpeg);
   display: flex;
   width: 100%;
@@ -36,8 +37,8 @@ html body{
 .nav{
   background-image: url(../images/History/nav.jpeg);
   width: 100%;
-  margin-top: 1px;
-  margin-left: -6px;
+  top: 0;
+  left: 0;
   position: fixed;
 }
 .nav #navigation {
@@ -54,12 +55,13 @@ html body{
 .pagebody {
   display: flex;
   justify-content:space-around;
-
+  
 }
 .leftBody {
   margin-top: 250px;
   width: 50%;
   justify-content: center;
+  
 }
 #linksLeft {
   width: 60%;
@@ -77,6 +79,12 @@ html body{
   width: 40%;
   justify-items: center;
   padding-left: 100px;
+}
+.pageBodyMid {
+  margin-left: 30px;
+  display: inline-flex;
+  justify-content: space-between;
+  gap: 50px;
 }
 
 a {
@@ -100,14 +108,13 @@ p {
 }
 
 .footer {
-  background-image: url(../images/History/top.jpeg);
+  background-image: url(../images/History/bottom.jpeg);
   display: flex;
   justify-content: space-between;
   align-content: center;
-  width: 107%;
+  width: 100%;
   height: 180px; 
-  margin-left: -6px;
-  position: relative;       
+  margin: 30px 0 0 -10px;
 }
 .foot {
   width: 70px;
