--- a/resources/css/history.css
+++ b/resources/css/history.css
@@ -16,6 +16,7 @@ html body{
   top: 0;
   left: 0;
   background-image: url(../images/History/top.jpeg);
+  background-repeat: no-repeat;
   display: flex;
   width: 100%;
   height: 180px;   
@@ -114,7 +115,7 @@ p {
   align-content: center;
   width: 100%;
   height: 180px; 
-  margin: 30px 0 0 -10px;
+  margin: 0 0 0 0;
 }
 .foot {
   width: 70px;
