--- a/resources/css/history.css
+++ b/resources/css/history.css
@@ -82,6 +82,7 @@ html body{
   padding-left: 100px;
 }
 .pageBodyMid {
+  width: 100%;
   margin-left: 30px;
   display: inline-flex;
   justify-content: space-between;
@@ -115,7 +116,9 @@ p {
   align-content: center;
   width: 100%;
   height: 180px; 
-  margin: 0 0 0 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 .foot {
   width: 70px;
