played with bric a brac

--- a/resources/css/history.css
+++ b/resources/css/history.css
@@ -99,6 +99,14 @@ html body{
 .pageBodyMid .pic3 {
   display: block;
 }
+.pageBodyBricaBrac {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  text-align: center;
+}
+
 a {
   text-decoration: none;
   color: black ;
