--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -12,120 +12,95 @@ html body{
 
 /* GRID SETUP*/
 .gridbody {
-  display: grid;
-  grid-column-start: 1;
-  grid-column-end: 12;
-}
-.gridbody .heading {
-  grid-column-start: 1;
-  grid-column-end: 12;
-}
-.gridbody .navigation {
-  grid-column-start: 1;
-  grid-column-end: 12;
-}
-.gridbody .footer {
-  background-color:rgba(13, 16, 44, 0.7);   
-  grid-column-start: 1;
-  grid-column-end: 12;
+  border: 30px solid transparent;
+  border-color: black;
+  background-color: rgba(248, 251, 251, 0.4); 
+  border-radius: 30px;
+  margin-top: 75px;
+  margin-bottom: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  height: auto;
+  width: 45%;
+  -moz-box-shadow: 0 0 15px black;
+  -webkit-box-shadow: 0 0 15px black;
+  box-shadow: 0 0 15px black;
+  z-index: 3;
 }
 
-/* HEADING BAR */
-.heading {
-  display: flex;
+.gridbody .heading {
+  display: inline;
+  font-size: 4rem;
+  text-align: center;
+  background-color: rgba(248, 251, 251, 0.4); 
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 3px;
+  padding-bottom: 3px;
   width: 100%;
-  height: 9.5rem;   
+  z-index: 5;
+ }
+ .gridbody .heading img{
+   width: 200px;
+ }
+ .gridbody .heading h1 {
+   float: right;
+ }
+ 
+ .gridbody .navigation {
+  text-align: center; 
+  background-color: rgba(248, 251, 251, 0.4); 
+  margin-left: auto;
+  margin-right: auto;
+  height: 600px;
+  width: 100%;
+  z-index: 5;
+ }
+ .gridbody .navigation h2 {
+   font-size: 2.4rem;
 }
-.heading #headingname {
-  width: 70%;
-  margin-left: 3%;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: 4.5rem;
-  color: whitesmoke;
+.gridbody .navigation a {
+  color: darkred;
 }
-.heading #headingimg{
-  margin-right: 5%;
-  width: 100px;
-  height: auto;
-}
-.navigation .home{
-  float: right;
-  align-items: center;
-  width: 50%;
-  display: inline;  
-}
-.home button {
-  background-color:rgba(248, 248, 244, 0.774);
-  width: 300px;
-  height: 50px;
-  margin-right: 10%;
-  margin-left: -20%;
-  font-size: 1.3rem;
-  margin-top: 5%;
-  margin-bottom: 5%;
+.gridbody .navigation a:hover {
+  color: rgb(0, 139, 28);
 }
 
 /* FOOTER */
-.footer {
+.gridbody .footer {
   display: flex;
   justify-content: space-around;
-  position: absolute;
-  bottom: 0;
   width: 100%;
   height: 3.5rem;           
 }
 .name {
-  color:#f0edce ;
+  color:black ;
 }
 
-@media(max-width: 1620px) {
-  .heading #headingname {
-    margin-top: -15px;
-    font-size: 3.5rem;
+@media(max-width: 1860px) {
+  .gridbody {
+    width: 60%;
   }
 }
- 
-@media(max-width: 1000px) {
-  .home button {
-    background-color:rgba(248, 248, 244, 0.774);
-    font-size: 2.3rem;
-    width: 300px;
-    height: 100px;
-  }
-  .navigation .home{
-    align-items: center;
+@media(max-width: 1350px) {
+  .gridbody {
+    width: 70%;
   }
 }
-@media(max-width: 650px) {
-  .heading #headingname {
-    font-size: 3.5rem;
+@media(max-width: 1200px) {
+  .gridbody {
+    width: 90%;
   }
-  .navigation .home{
-    align-items: center;
+  .gridbody .heading {
+    font-size: 1.7rem;
   }
-  .home button {
-    margin-left: -110px;
-    background-color:rgba(248, 248, 244, 0.774);
-    font-size: 2.3rem;
-    width: 300px;
-    height: 100px;
+  .gridbody .nav {
+    font-size: 1.5rem;
   }
-  
+  .gridbody .port p {
+    font-size: 1.5rem;
+    line-height: 1.5rem;
   }
-  @media screen and (max-width: 480px) {
-    .heading #headingname {
-      font-size: 3.5rem;
-    }
-    .navigation .home{
-      align-items: center;
-     }
-    .home button {
-      margin-left: -110px;
-      background-color:rgba(248, 248, 244, 0.774);
-      font-size: 2.3rem;
-      width: 300px;
-      height: 100px;
-     }
-    }
+}
    
   
