--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -76,31 +76,107 @@ html body{
 .name {
   color:black ;
 }
-
+@media(max-width: 2020px) {
+  .gridbody {
+    width: 50%;
+  }
+  .gridbody .heading {
+    display: inline;
+    font-size: 3.8rem;
+    text-align: center;
+    background-color: rgba(248, 251, 251, 0.4); 
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    width: 100%;
+    z-index: 5;
+    }
+    .gridbody .heading h1 {
+      float: right;
+    }
+}
 @media(max-width: 1860px) {
   .gridbody {
     width: 60%;
   }
+  .gridbody .heading {
+    display: inline;
+    font-size: 3.5rem;
+    text-align: center;
+    background-color: rgba(248, 251, 251, 0.4); 
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    width: 100%;
+    z-index: 5;
+    }
+    .gridbody .heading h1 {
+      float: right;
+    }
 }
-@media(max-width: 1350px) {
+@media(max-width: 1370px) {
   .gridbody {
-    width: 70%;
+    width: 65%;
+  }
+  .gridbody .heading {
+  display: inline;
+  font-size: 3.2rem;
+  text-align: center;
+  background-color: rgba(248, 251, 251, 0.4); 
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  width: 100%;
+  z-index: 5;
+  }
+  .gridbody .heading h1 {
+    float: right;
   }
 }
 @media(max-width: 1200px) {
   .gridbody {
-    width: 90%;
+    width: 80%;
   }
   .gridbody .heading {
-    font-size: 1.7rem;
-  }
-  .gridbody .nav {
-    font-size: 1.5rem;
-  }
-  .gridbody .port p {
-    font-size: 1.5rem;
-    line-height: 1.5rem;
+    display: inline;
+    font-size: 3rem;
+    text-align: center;
+    background-color: rgba(248, 251, 251, 0.4); 
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    width: 100%;
+    z-index: 5;
+    }
+    .gridbody .heading h1 {
+      float: right;
+    }
+  .gridbody .nav h2{
+    font-size: 2.5rem;
   }
 }
-   
+@media(max-width: 930px) {
+  .gridbody {
+    width: 80%;
+  }
+  .gridbody .heading {
+    display: block;
+    font-size: 3rem;
+    text-align: center;
+    background-color: rgba(248, 251, 251, 0.4); 
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    width: 100%;
+    z-index: 5;
+    }
+  .gridbody .nav h2{
+    font-size: 2.5rem;
+  }
+}  
   
