--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -14,14 +14,14 @@ html body{
 .gridbody {
   border: 30px solid transparent;
   border-color: black;
-  background-color: rgba(248, 251, 251, 0.4); 
+  background-color: rgba(94, 115, 101, 0.4); 
   border-radius: 30px;
   margin-top: 75px;
   margin-bottom: 15px;
   margin-left: auto;
   margin-right: auto;
   height: auto;
-  width: 45%;
+  width: 50vw;
   -moz-box-shadow: 0 0 15px black;
   -webkit-box-shadow: 0 0 15px black;
   box-shadow: 0 0 15px black;
@@ -30,9 +30,9 @@ html body{
 
 .gridbody .heading {
   display: inline;
-  font-size: 4rem;
+  font-size: 3vw;
   text-align: center;
-  background-color: rgba(248, 251, 251, 0.4); 
+  background-color: transparent; 
   margin-left: auto;
   margin-right: auto;
   padding-top: 3px;
@@ -41,7 +41,7 @@ html body{
   z-index: 5;
  }
  .gridbody .heading img{
-   width: 200px;
+   width: 10vw;
  }
  .gridbody .heading h1 {
    float: right;
@@ -49,7 +49,7 @@ html body{
  
  .gridbody .navigation {
   text-align: center; 
-  background-color: rgba(248, 251, 251, 0.4); 
+  background-color: transparent; 
   margin-left: auto;
   margin-right: auto;
   height: 600px;
@@ -60,10 +60,10 @@ html body{
    font-size: 2.4rem;
 }
 .gridbody .navigation a {
-  color: darkred;
+  color: rgb(243, 240, 30);
 }
 .gridbody .navigation a:hover {
-  color: rgb(0, 139, 28);
+  color: rgb(0, 14, 139);
 }
 
 /* FOOTER */
@@ -76,107 +76,36 @@ html body{
 .name {
   color:black ;
 }
-@media(max-width: 2020px) {
+
+@media(max-width: 1800px) {
   .gridbody {
-    width: 50%;
+  width: 60vw;
   }
   .gridbody .heading {
-    display: inline;
-    font-size: 3.8rem;
-    text-align: center;
-    background-color: rgba(248, 251, 251, 0.4); 
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    width: 100%;
-    z-index: 5;
-    }
-    .gridbody .heading h1 {
-      float: right;
-    }
-}
-@media(max-width: 1860px) {
-  .gridbody {
-    width: 60%;
+  font-size: 4vw;
   }
-  .gridbody .heading {
-    display: inline;
-    font-size: 3.5rem;
-    text-align: center;
-    background-color: rgba(248, 251, 251, 0.4); 
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    width: 100%;
-    z-index: 5;
-    }
-    .gridbody .heading h1 {
-      float: right;
-    }
-}
-@media(max-width: 1370px) {
-  .gridbody {
-    width: 65%;
-  }
-  .gridbody .heading {
-  display: inline;
-  font-size: 3.2rem;
-  text-align: center;
-  background-color: rgba(248, 251, 251, 0.4); 
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  width: 100%;
-  z-index: 5;
+  .gridbody .heading img{
+  width: 12vw;
   }
   .gridbody .heading h1 {
     float: right;
+    }
   }
-}
 @media(max-width: 1200px) {
   .gridbody {
-    width: 80%;
+    width: 80vw;
+  }
+  .gridbody .heading img{
+    width: 14vw;
   }
   .gridbody .heading {
-    display: inline;
-    font-size: 3rem;
-    text-align: center;
-    background-color: rgba(248, 251, 251, 0.4); 
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    width: 100%;
-    z-index: 5;
-    }
-    .gridbody .heading h1 {
+    font-size: 5vw;
+  }
+  .gridbody .heading h1 {
       float: right;
-    }
+  }
   .gridbody .nav h2{
     font-size: 2.5rem;
   }
-}
-@media(max-width: 930px) {
-  .gridbody {
-    width: 80%;
-  }
-  .gridbody .heading {
-    display: block;
-    font-size: 3rem;
-    text-align: center;
-    background-color: rgba(248, 251, 251, 0.4); 
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    width: 100%;
-    z-index: 5;
-    }
-  .gridbody .nav h2{
-    font-size: 2.5rem;
-  }
-}  
+} 
   
