--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -13,7 +13,7 @@ html body {
 .gridbody {
   border: 30px solid transparent;
   border-color: black;
-  background-color: whitesmoke;
+  background-color: rgba(94, 115, 101, 0.4); 
   border-radius: 30px;
   margin-top: 75px;
   margin-bottom: 15px;
@@ -28,9 +28,9 @@ html body {
 }
 /* HEADING BAR */
 .gridbody .heading {
-  font-size: 2rem;
+  font-size: 2vw;
   text-align: center;
-  background-color:whitesmoke;
+  background-color:transparent;
   margin-left: auto;
   margin-right: auto;
   padding-top: 3px;
@@ -40,7 +40,7 @@ html body {
  }
  
  .gridbody .navigation {
-  background-color:whitesmoke;
+  background-color:transparent;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
@@ -55,26 +55,26 @@ html body {
   z-index: 10;
  }
  .gridbody .nav a{
-  color: darkred;
+  color: rgb(0, 14, 139);
  }
  .gridbody .nav a:hover {
   color: #57d857;
 }
 .gridbody .port {
-  background-color:whitesmoke;
+  background-color:transparent;
 }
 .gridbody .port p {
   font-size: 1.1rem;
   line-height: 1.3rem;
   letter-spacing:0.1rem;
   font-weight: 700;
-  color:black ;
+  color:whitesmoke ;
   margin-right: auto;
   margin-left: auto;
   width: 97%;
 }
 .gridbody .port em {
-  color: darkred;
+  color: rgb(243, 240, 30);
 }
 .gridbody .slideshow-container {
   width: 95%;
@@ -112,9 +112,7 @@ html body {
     line-height: 1.5rem;
   }
 }
-.gridbody .mainbody{
-  background-color: rgb(81, 83, 83, 0.4); 
-}
+
 .gridbody .mainbody .c{
   background-color: transparent;
   margin-left: auto;
@@ -128,7 +126,7 @@ html body {
   text-align: center;
   font-size: 2rem;
   font-weight: 800;
-  color:darkred;
+  color: rgb(243, 240, 30);
 }
 .gridbody .mainbody .p{
   font-family: Arial, Helvetica, sans-serif;
@@ -210,20 +208,13 @@ html body {
   color:whitesmoke ;
   margin-right: 4%;
 }
-.E1, .E2, .E3, .E4, .E5, .E6 {
-  width: 60%;
-  background-color: rgb(81, 83, 83);
+.E1, .E2, .E3, .E4, .E5, .E6, .E7 {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgba(4, 4, 4, 0.2);
   padding-top: 2%;
   padding-bottom: 3%;
-  box-shadow: 15px 15px 10px rgb(17, 16, 16);
-}
-.E7 {
-  text-align: left;
-  width:35%;
-  background-color: rgb(81, 83, 83);
-  padding-top: 2%;
-  padding-bottom: 3%;
-  float: right;
   box-shadow: 15px 15px 10px rgb(17, 16, 16);
 }
 .about {
