--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -76,11 +76,19 @@ html body {
 .gridbody .port em {
   color: rgb(243, 240, 30);
 }
-.gridbody .slideshow-container {
-  width: 95%;
-  margin-left: auto;
-  margin-right: auto;
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
 }
+
+/* Hide the images by default */
+.mySlides1{
+  display: none;
+  z-index: 1;
+}
+
 
 .gridbody footer a {
   margin-left: auto;
@@ -138,12 +146,6 @@ html body {
   margin-right: 4%;
 }
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
 
 /* Hide the images by default */
 .mySlides1 {
@@ -152,13 +154,20 @@ html body {
   z-index: 1;
 }
 
+.mainbody .mySlides2 {
+  display: none;
+  padding-left: 5%;
+  z-index: 1;
+}
 
 
 /* Caption text */
 .text {
-  color: black;
-  font-size: 20px;
-  padding: 2% 5%;
+  text-align: center;
+  color: rgb(0, 14, 139);
+  font-weight: 700;
+  font-size: 2vw;
+  letter-spacing: 0.1rem;
   bottom: 8px;
   width: 100%;
 }
