--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -8,6 +8,9 @@ html body{
   background-size: cover;
   align-content: center;
 }
+html{
+  scroll-behavior: smooth;
+}
 
 
 /* GRID SETUP*/
@@ -27,34 +30,65 @@ html body{
   box-shadow: 0 0 15px black;
   z-index: 3;
 }
-
+/* HEADING SETUP */
 .gridbody .heading {
-  display: inline;
-  font-size: 3vw;
-  text-align: center;
-  background-color: transparent; 
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  width: 100%;
-  z-index: 5;
+  display: flex;
+  bottom: 0;
+  margin: 0 auto 0 auto;
+  padding: 12px 0;
+  background: linear-gradient(#CF9DCF 50%, #CF6262 50%);
+  border-radius: 20px 0 0 20px;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
  }
- .gridbody .heading img{
-   width: 10vw;
+.gridbody .heading-panel{
+    width: 12%;
+    max-width: 130px;
+    height: 20px;
+    margin: auto;
+    padding: 10px 0 0 1%;
+    background-color: #F2DF6F;
+    border-top: 5px solid #000;
+    border-bottom: 5px solid #000;
+    font-size: .85rem;
+    font-weight: bold;
+    color: #000;
+  }
+.heading-inside {
+    flex: 1;
+    min-height: 100px;
+    background-color: #000;
+    border-radius: 20px 0 0 20px;
+    padding: 1.5rem 1rem;
+    z-index: 2;
+  }
+.heading-text {
+    display: inline;
+    flex-direction: row;
+    min-height: 100px;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    text-align: center;
+    font-size: 2.5vw;
+    color: #FFFFCB;
+  }
+.gridbody .heading img{
+   width: 8vw;
  }
- .gridbody .heading h1 {
+.gridbody .heading h1 {
    float: right;
  }
  
+ /* NAVIGATION SETUP*/
  .gridbody .navigation {
   text-align: center; 
   background-color: transparent; 
   margin-left: auto;
   margin-right: auto;
-  height: 600px;
+  height: 400px;
   width: 100%;
-  z-index: 5;
  }
  .gridbody .navigation h2 {
    font-size: 2.4rem;
@@ -66,46 +100,62 @@ html body{
   color: rgb(0, 14, 139);
 }
 
-/* FOOTER */
-.gridbody .footer {
+/* FOOTER SETUP */
+footer {
   display: flex;
-  justify-content: space-around;
-  width: 100%;
-  height: 3.5rem;           
+  bottom: 0;
+  margin: 50px auto 0 auto;
+  padding: 12px 0;
+  background: linear-gradient(#99CDFF 50%, #FFFFCB 50%);
+  border-radius: 0 20px 20px 0;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
 }
+.footer-panel {
+  width: 12%;
+  max-width: 130px;
+  height: 20px;
+  margin: auto;
+  padding: 10px 0 0 1%;
+  background-color: #F2DF6F;
+  border-top: 5px solid #000;
+  border-bottom: 5px solid #000;
+  font-size: .85rem;
+  font-weight: bold;
+  color: #000;
+}
+
+.footer-inside {
+  flex: 1;
+  min-height: 100px;
+  background-color: #000;
+  border-radius: 0 20px 20px 0;
+  padding: 1.5rem 1rem;
+  z-index: 2;
+}
+
+.footer-text {
+  display: flex;
+  flex-direction: column;
+  min-height: 100px;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  text-align: center;
+  font-size: 1rem;
+  color: #FFFFCB;
+}
+.footer-text .foot{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.footer-text > * {
+  margin: 0;
+}
+
 .name {
   color:black ;
 }
 
-@media(max-width: 1800px) {
-  .gridbody {
-  width: 60vw;
-  }
-  .gridbody .heading {
-  font-size: 4vw;
-  }
-  .gridbody .heading img{
-  width: 12vw;
-  }
-  .gridbody .heading h1 {
-    float: right;
-    }
-  }
-@media(max-width: 1200px) {
-  .gridbody {
-    width: 80vw;
-  }
-  .gridbody .heading img{
-    width: 14vw;
-  }
-  .gridbody .heading {
-    font-size: 5vw;
-  }
-  .gridbody .heading h1 {
-      float: right;
-  }
-  .gridbody .nav h2{
-    font-size: 2.5rem;
-  }
-} 
-  
