--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -15,6 +15,7 @@ body {
 
 p {
   color: #FFFFCB;
+  font-size: 1.2rem;
 }
 
 
@@ -99,8 +100,8 @@ p {
   padding: 0 0 15px 5px;
   text-align: center;
   text-transform: uppercase;
-  line-height: 1.2;
-  font-size: clamp(1.2rem, 1.3rem + 2.6vw, 3.1rem);
+  line-height: 1.9;
+  font-size: clamp(1.2rem, 1.3rem + 2.6vw, 4.1rem);
   color: #FFFFCB;
 }
 
@@ -370,7 +371,10 @@ p {
   max-width: 100%;
   height: auto;
 }
-
+.content h1 {
+  color: #FFFFCB;
+  font-size: clamp(1.2rem, 1.3rem + 2.6vw, 5.1rem);
+}
 
 .flexbox {
   display: flex;
@@ -568,10 +572,7 @@ p.postmeta {
   font-weight: bold;
   text-transform: uppercase;
   color: #000;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  
 }
 
 .buttons a:active, .buttons a:focus {
