played with employment side

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -173,7 +173,7 @@ p {
   margin: 10px;
   text-decoration: none;
   text-transform: uppercase;
-  text-align: left;
+  text-align: right;
   font-weight: bold;
   color: #000;
 }
