--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -17,15 +17,16 @@ html body {
   border-radius: 30px;
   margin-top: 75px;
   margin-bottom: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 30px;
+  margin-right: 30px;
   height: auto;
-  width: 45%;
+  width: auto;
   -moz-box-shadow: 0 0 15px black;
   -webkit-box-shadow: 0 0 15px black;
   box-shadow: 0 0 15px black;
   z-index: 3;
 }
+
 /* HEADING BAR */
 .gridbody .heading {
   font-size: 2vw;
@@ -95,20 +96,10 @@ html body {
   margin-right: auto;
   color: black;
 }
-@media(max-width: 1860px) {
-  .gridbody {
-    width: 60%;
-  }
-}
-@media(max-width: 1350px) {
-  .gridbody {
-    width: 70%;
-  }
-}
+
+
 @media(max-width: 1200px) {
-  .gridbody {
-    width: 90%;
-  }
+  
   .gridbody .heading {
     font-size: 1.7rem;
   }
@@ -210,7 +201,7 @@ html body {
   color:whitesmoke ;
   margin-right: 4%;
 }
-.E1, .E2, .E3, .E4, .E5, .E6, .E7 {
+.E1, .E2, .E3, .E4, .E5, .E6 {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
@@ -219,6 +210,17 @@ html body {
   padding-bottom: 3%;
   box-shadow: 15px 15px 10px rgb(17, 16, 16);
 }
+.E7 {
+  width: auto;
+  margin-left: 3vw;
+  margin-right: 20vw;
+  background-color: rgba(4, 4, 4, 0.2);
+  padding-top: 2%;
+  padding-bottom: 3%;
+  box-shadow: 15px 15px 10px rgb(17, 16, 16);
+}
+
+
 .about {
   font-family:Arial, Helvetica, sans-serif;
   font-size: 1.1rem;
