--- a/resources/css/portfolio.css
+++ b/resources/css/portfolio.css
@@ -144,6 +144,12 @@ html body {
 }
 
 
+/* Hide the images by default */
+.E1, .E2, .E3, .E4, .E5, .E6{
+  display: none;
+  z-index: 1;
+}
+
 
 /* Caption text */
 .text {
@@ -165,6 +171,23 @@ html body {
 }
 
 @keyframes fade {
+  0% {opacity: 0; }
+  25% {opacity: 1; }
+  50% {opacity: 1; }
+  75% {opacity: 1; }
+  100% {opacity: 0 ;}
+
+  /*from {opacity: .5} 
+  to {opacity: 1}*/
+}
+.fade1 {
+  /*animation-name: fade;*/
+  /*animation-duration: 2.5s;*/
+  animation: fade 20s linear forwards;
+  opacity: 0;
+}
+
+@keyframes fade1 {
   0% {opacity: 0; }
   25% {opacity: 1; }
   50% {opacity: 1; }
@@ -201,15 +224,7 @@ html body {
   color:whitesmoke ;
   margin-right: 4%;
 }
-.E1, .E2, .E3, .E4, .E5, .E6 {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: rgba(4, 4, 4, 0.2);
-  padding-top: 2%;
-  padding-bottom: 3%;
-  box-shadow: 15px 15px 10px rgb(17, 16, 16);
-}
+
 .E7 {
   width: auto;
   margin-left: 3vw;
@@ -220,7 +235,17 @@ html body {
   box-shadow: 15px 15px 10px rgb(17, 16, 16);
 }
 
-
+.col{
+  flex: 1 1 300px;
+  width: auto;
+  margin-left: 20vw;
+  margin-right: 3vw;
+  margin-bottom: 2vw;
+  background-color: rgba(4, 4, 4, 0.2);
+  padding-top: 2%;
+  padding-bottom: 3%;
+  box-shadow: 15px 15px 10px rgb(17, 16, 16);
+}
 .about {
   font-family:Arial, Helvetica, sans-serif;
   font-size: 1.1rem;
