--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -187,10 +187,10 @@ body {
 
 @media (max-width: 1200px) {
   .landing-box-back, .landing-box-front {
-    height: 2400px;
+    height: 2200px;
   }
   .landing-content-inside{
-    height: 2000px;
+    height: 1800px;
   }
   .landing-content-text p {
     font-size: clamp(1.8rem, .9rem + 3.6vw, 2.1rem);
@@ -198,7 +198,12 @@ body {
   .clock, .date{
     font-size: 1.4rem;
   }
-
+  .landing-content-text h1 {
+    font-size: clamp(1.3rem, 1.5rem + 3.6vw, 4.3rem);
+  }
+  .landing-button-text a {
+    font-size: 1.6rem;
+  }
  }
 
 /* ////////////////////////////////////////////////////////////////////*/
