--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -354,15 +354,7 @@ body {
   .employment-content-inside{
     height: 1400px;
   }
-  .employment-text p {
-    font-size: clamp(1.8rem, .9rem + 3.6vw, 2.1rem);
-  }
-  .employment-content-text h1 {
-    font-size: clamp(1.3rem, 1.5rem + 3.6vw, 4.3rem);
-  }
-  .employment-button-text a {
-    font-size: 1.6rem;
-  }
+  
  }
 
 /*/////////////////////////////////////////////////////////////////////////////*/
@@ -664,6 +656,15 @@ body {
   display: none;
   z-index: 1;
 }
+@media (max-width: 1200px) {
+  .cert-box-back {
+    height: 1800px;
+  }
+  .cert-content-inside{
+    height: 1400px;
+  }
+ }
+
 
 /*/////////////////////////////////////////////////////////////////////////////*/
 
