--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -661,7 +661,10 @@ body {
     height: 1800px;
   }
   .cert-content-inside{
-    height: 1400px;
+    height: 1600px;
+  }
+  .cert-content-text-bottom {
+    height: 1200px;
   }
  }
 
@@ -941,13 +944,22 @@ body {
 .port-slides img{
   margin-top:10px;
 }
-
+@media (max-width: 1200px) {
+  .port-box-back {
+    height: 1800px;
+  }
+  .port-content-inside{
+    height: 1600px;
+  }
+  .port-content-text-bottom {
+    height: 1200px;
+  }
+ }
 
 /*/////////////////////////////////////////////////////////////////////////////*/
 
 /*Contact Box*/
 .contact-box {
-
   margin-left: auto;
   margin-right: auto;
   background-color: #000;
@@ -1044,3 +1056,8 @@ body {
 .contact-about-text em {
   color: #1a6f07;
 }
+@media (max-width: 1200px) {
+  .contact-box {
+    height: 1800px;
+  }
+ }
