--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -707,6 +707,7 @@ body {
   }
   .CC, .QC, .BM{
     margin: 10px 70px;
+    height: 60px;
   }
   .cert-content-text-bottom {
     height: 1120px;
@@ -1039,7 +1040,7 @@ body {
     font-size: 1.3rem;
   }
   .mySlides3 img {
-    width: 100%;
+    width: 90%;
   }
  }
 
@@ -1151,5 +1152,17 @@ body {
   .contact-about-text {
     line-height: 1.5rem;
     letter-spacing: 0.2rem;
+  }
+  .FB, .IN{
+    width: 300px;
+    height: 60px;
+    font-size: 1.3rem;
+    margin: 3px 70px;
+  }
+  .EM{
+    width: 200px;
+    height: 60px;
+    font-size: 1.3rem;
+    margin: 3px 70px;
   }
  }
