fixed portfolio text color and wording

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -922,7 +922,7 @@ body {
   margin-top: -5px;
 }
 .port-content-text-in em {
-  color: rgb(110, 130, 227);
+  color: whitesmoke;
 }
 .port-content-text-in a {
   color: #5bae5b;
